# chartelier

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: dev-qa.md
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: ci.md  docs.md  feature.md  fix.md  ops.md  perf.md  release.md  security.md  spec_api.md  template_pattern.md
.github/workflows/: ci.yml
colab/: README.md  run_gpt_oss_test.ipynb  setup_gpt_oss.py  setup_simple.py  start_vllm_server.py  test_with_small_model.ipynb
docs/: api-reference.md  design.md  index.md  mcp-integration.md  requirements-specification.md  test-design-specification.md  visualization-policy.md
docs/adr/: 0001-dataframe-engine.ja.md  0002-pattern-selection-error-handling.md  template.ja.md
src/chartelier/: __init__.py
src/chartelier/core/: __init__.py  enums.py  errors.py  models.py
src/chartelier/core/chart_builder/: __init__.py  axis.py  base.py  builder.py  colors.py  fonts.py  theme.py  themes.py
src/chartelier/core/chart_builder/templates/: __init__.py  bar.py  grouped_bar.py  line.py  multi_line.py  overlay_histogram.py
src/chartelier/core/chart_builder/templates/p01/: __init__.py  line.py
src/chartelier/core/chart_builder/templates/p02/: __init__.py  bar.py
src/chartelier/core/chart_builder/templates/p03/: __init__.py  histogram.py
src/chartelier/core/chart_builder/templates/p04/: __init__.py
src/chartelier/core/chart_builder/templates/p05/: __init__.py
src/chartelier/core/chart_builder/templates/p06/: __init__.py
src/chartelier/core/chart_builder/templates/p07/: __init__.py
src/chartelier/core/chart_builder/templates/p08/: __init__.py
src/chartelier/core/chart_builder/templates/p09/: __init__.py
src/chartelier/core/chart_builder/templates/p10/: __init__.py
src/chartelier/core/chart_builder/templates/p11/: __init__.py
src/chartelier/core/chart_builder/templates/p12/: __init__.py  multi_line.py
src/chartelier/core/chart_builder/templates/p13/: __init__.py  facet_histogram.py
src/chartelier/core/chart_builder/templates/p14/: __init__.py
src/chartelier/core/chart_builder/templates/p15/: __init__.py
src/chartelier/core/chart_builder/templates/p16/: __init__.py
src/chartelier/core/chart_builder/templates/p17/: __init__.py
src/chartelier/core/chart_builder/templates/p18/: __init__.py
src/chartelier/core/chart_builder/templates/p19/: __init__.py
src/chartelier/core/chart_builder/templates/p20/: __init__.py
src/chartelier/core/chart_builder/templates/p21/: __init__.py  grouped_bar.py
src/chartelier/core/chart_builder/templates/p22/: __init__.py
src/chartelier/core/chart_builder/templates/p23/: __init__.py  overlay_histogram.py
src/chartelier/core/chart_builder/templates/p24/: __init__.py
src/chartelier/core/chart_builder/templates/p25/: __init__.py
src/chartelier/core/chart_builder/templates/p26/: __init__.py
src/chartelier/core/chart_builder/templates/p27/: __init__.py
src/chartelier/core/chart_builder/templates/p28/: __init__.py
src/chartelier/core/chart_builder/templates/p29/: __init__.py
src/chartelier/core/chart_builder/templates/p30/: __init__.py
src/chartelier/core/chart_builder/templates/p31/: __init__.py  small_multiples.py
src/chartelier/core/chart_builder/templates/p32/: __init__.py  box_plot.py
src/chartelier/infra/: __init__.py  llm_client.py  logging.py  prompt_template.py
src/chartelier/interfaces/: __init__.py  validators.py
src/chartelier/interfaces/mcp/: __init__.py  handler.py  protocol.py  server.py
src/chartelier/orchestration/: __init__.py  coordinator.py
src/chartelier/processing/: __init__.py  data_mapper.py  data_processor.py  data_validator.py  pattern_selector.py
src/chartelier/processing/chart_selector/: __init__.py  processor.py
src/chartelier/processing/chart_selector/prompts/: auxiliary_selection.toml  chart_selection.toml
src/chartelier/processing/data_mapper/: __init__.py  data_mapper.py
src/chartelier/processing/data_mapper/prompts/: v0.1.0.toml
src/chartelier/processing/pattern_selector/: __init__.py  processor.py
src/chartelier/processing/pattern_selector/prompts/: v0.1.0.toml
tests/: __init__.py  test_version.py
tests/core/chart_builder/: test_colors.py  test_fonts.py  test_themes.py
tests/infra/: test_llm_client.py
tests/integration/: __init__.py  test_data_flow.py  test_data_validator_integration.py  test_pattern_selector_integration.py
tests/local/: __init__.py
tests/local/visual_output/: __init__.py  test_auxiliary_matrix.py  test_basic_charts.py
tests/orchestration/: test_coordinator.py
tests/processing/: test_data_processor.py
tests/st/: test_mcp_handler.py  test_mcp_response_format.py
tests/unit/core/: test_enums.py  test_errors.py  test_models.py
tests/unit/core/chart_builder/: __init__.py  test_auxiliary_elements.py  test_axis.py  test_bar_template.py  test_box_plot_template.py  test_builder.py  test_chart_builder_9_patterns.py  test_export.py  test_histogram_template.py  test_line_template.py  test_multi_line_template.py  test_visual_output.py
tests/unit/infra/: test_logging.py  test_prompt_template.py
tests/unit/interfaces/: test_validators.py
tests/unit/processing/: __init__.py  test_chart_selector.py  test_data_mapper.py  test_data_validator.py  test_pattern_selector.py  test_pattern_selector_template.py
